# euclids-square

./: .gitignore  readme.md
hardware/components/10118193-0001LF/: 10118193-0001LF.lib  FCI_10118193-0001LF.kicad_mod
hardware/components/35RAPC4BHN2/: 35RAPC4BHN2.kicad_sym  35RAPC4BHN2.lib  SWITCHCRAFT_35RAPC4BHN2.kicad_mod
hardware/front-panel/: euclids-square-front-panel.kicad_pcb  euclids-square-front-panel.kicad_prl  euclids-square-front-panel.kicad_pro
hardware/main/: euclids-square.kicad_pcb  euclids-square.kicad_prl  euclids-square.kicad_pro  euclids-square.kicad_sch  fp-info-cache  fp-lib-table  leds.kicad_sch  sym-lib-table
software/euclidean_rhythm/: Cargo.toml  readme.md
software/euclidean_rhythm/src/: lib.rs
software/euclids_square/: .gitignore  Cargo.toml  memory.x  openocd.gdb  readme.md
software/euclids_square/.cargo/: config
software/euclids_square/sounds/: hihat.pcm  kick.pcm  snare.pcm
software/euclids_square/src/: init_peripherals.rs  inputs.rs  leds.rs  main.rs  sequencer.rs  synthesizer.rs  ui.rs  view.rs
